--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <title>Amazon sentiment analysis</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="{{ url_for('static', filename='../static/js/predict_sentiment.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -16,20 +18,20 @@
         <p>Enter your review and choose a model to predict:</p>
 
         <!--Input section: textarea & embedding method-->
-        <form action="{{url_for('predict')}}" method='POST' class='form'>
-            <textarea placeholder="Enter text here..." name='text' class='textbox'></textarea>
-            <br>
-            <select name='mlmodel'>
-                <option value='lgr'>Logistic Regression</option>
-                <option value='svm'>SVM</option>
-            </select>
-            <input type="submit" value="Predict!" class="button"></input>
-        </form>
+        <textarea placeholder="Enter text here..." name='text' id='textbox'></textarea>
+        <br>
+        <select id='ml-model'>
+            <option value='lgr'>Logistic Regression</option>
+            <option value='svm'>SVM</option>
+        </select>
+        <input type="submit" name="predict" value="Predict!" class="button"
+        onclick="predict_sentiment();"></input>
 
-        <div class='prediction'>
-            <span id ='original-text'>{{entered_text}} {{original_text}}</span>
-            <span id='prediction-text'>{{prediction_text}}</span>
+        <div id='prediction'>
+            <span id='original-text'></span>
+            <span id='prediction-text'></span>
         </div>
     </div>
+    
 </body>
 
