--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class='panel'>
         <p>Enter your review and choose a model to predict:</p>
 
-        <!--Input section: textarea & embedding method-->
+        <!--Input section: textarea & prediction method-->
         <textarea placeholder="Enter text here..." name='text' id='textbox'></textarea>
         <br>
         <select id='ml-model'>
@@ -25,8 +25,9 @@
             <option value='svm'>SVM</option>
         </select>
         <input type="submit" name="predict" value="Predict!" class="button"
-        onclick="predict_sentiment();"></input>
+        onclick="predictSentiment();"></input>
 
+        <!--Output section-->
         <div id='prediction'>
             <span id='original-text'></span>
             <span id='prediction-text'></span>
